--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.79.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
