--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
     "react-native-gesture-handler": "^2.25.0",
